# otus4

./: .travis.yml  CMakeLists.txt  Doxyfile  annotated.html  classes.html  files.html  globals.html  globals_defs.html  globals_func.html  hierarchy.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.md5  inherits.html  lib.h  lib_8h.html  lib_8h__dep__incl.map  lib_8h__dep__incl.md5  lib_8h_source.html  main.cpp  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  structis__tuple.html  structis__tuple_3_01const_01std_1_1tuple_3_01Ts_8_8_8_01_4_01_4.html  structis__tuple_3_01const_01std_1_1tuple_3_01Ts_8_8_8_01_4_01_4__coll__graph.md5  structis__tuple_3_01const_01std_1_1tuple_3_01Ts_8_8_8_01_4_01_4__inherit__graph.map  structis__tuple_3_01const_01std_1_1tuple_3_01Ts_8_8_8_01_4_01_4__inherit__graph.md5  structis__tuple_3_01const_01volatile_01std_1_1tuple_3_01Ts_8_8_8_01_4_01_4.html  structis__tuple_3_01const_01volatile_01std_1_1tuple_3_01Ts_8_8_8_01_4_01_4__coll__graph.map  structis__tuple_3_01const_01volatile_01std_1_1tuple_3_01Ts_8_8_8_01_4_01_4__coll__graph.md5  structis__tuple_3_01const_01volatile_01std_1_1tuple_3_01Ts_8_8_8_01_4_01_4__inherit__graph.md5  structis__tuple_3_01std_1_1tuple_3_01Ts_8_8_8_01_4_01_4.html  structis__tuple_3_01volatile_01std_1_1tuple_3_01Ts_8_8_8_01_4_01_4.html  structis__tuple_3_01volatile_01std_1_1tuple_3_01Ts_8_8_8_01_4_01_4__coll__graph.md5  structis__tuple_3_01volatile_01std_1_1tuple_3_01Ts_8_8_8_01_4_01_4__inherit__graph.map  structis__tuple_3_01volatile_01std_1_1tuple_3_01Ts_8_8_8_01_4_01_4__inherit__graph.md5  testboost.cpp  testboost_8cpp.html  testboost_8cpp__incl.map  (+7 more)
search/: all_0.js  all_3.js  all_4.js  all_5.js  classes_0.js  defines_0.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  searchdata.js
