cmake_minimum_required(VERSION 3.2)

if($ENV{TRAVIS_BUILD_NUMBER}) 
    project(doxy VERSION 0.0.$ENV{TRAVIS_BUILD_NUMBER})
else()
    project(doxy VERSION 0.0.3)
endif()

find_package(Boost COMPONENTS unit_test_framework REQUIRED)
find_package (Threads REQUIRED)

configure_file(version.h.in "${CMAKE_CURRENT_SOURCE_DIR}/version.h")

add_subdirectory(
       "${CMAKE_CURRENT_SOURCE_DIR}/gtest"
       googletest
)

add_executable(doxy main.cpp)
add_library(doxy.lib lib.cpp)
add_executable(test_version testboost.cpp)
add_executable(test_version_g testg.cpp)

set_target_properties(doxy  doxy.lib test_version test_version_g PROPERTIES
    CXX_STANDARD 17
    CXX_STANDARD_REQUIRED ON
)

target_include_directories(doxy.lib
    PRIVATE "${CMAKE_BINARY_DIR}"
)
set_target_properties(test_version PROPERTIES
    COMPILE_DEFINITIONS BOOST_TEST_DYN_LINK
    INCLUDE_DIRECTORIES ${Boost_INCLUDE_DIR}
)

target_link_libraries(doxy PRIVATE
    doxy.lib
)
target_link_libraries(test_version
    ${Boost_LIBRARIES}
    iptask.lib
)

target_link_libraries(test_version_g
    googletest 
    ${CMAKE_THREAD_LIBS_INIT}
    doxy.lib googletest_main
)

if (MSVC)
    target_compile_options(doxy PRIVATE
        /W4
    )
    target_compile_options(doxy.lib PRIVATE
        /W4
    )
    target_compile_options(test_version PRIVATE
        /W4
    )
    target_compile_options(test_version_g PRIVATE
        /W4
    )
else ()
    target_compile_options(doxy PRIVATE
        -Wall -Wextra -pedantic -Werror
    )
    target_compile_options(doxy.lib PRIVATE
        -Wall -Wextra -pedantic -Werror
    )
    target_compile_options(test_version PRIVATE
        -Wall -Wextra -pedantic -Werror
    )
    target_compile_options(test_version_g PRIVATE
        -Wall -Wextra -pedantic -Werror
    )
    target_compile_options(doxy PRIVATE
        -Wall -Wextra -pedantic -Werror
    )
endif()

install(TARGETS doxy RUNTIME DESTINATION bin)

set(CPACK_GENERATOR DEB)

set(CPACK_PACKAGE_VERSION_MAJOR "${PROJECT_VERSION_MAJOR}")
set(CPACK_PACKAGE_VERSION_MINOR "${PROJECT_VERSION_MINOR}")
set(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")

set(CPACK_PACKAGE_CONTACT lismut@gmail.com)

include(CPack)

enable_testing()

add_test(test_version test_version)
add_test(test_version_g test_version_g)